--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body {
     margin: 0;
     font-size: 12pt;
+    color: #666666;
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
 
@@ -27,13 +28,61 @@ body {
     background: rgba(255, 255, 255, 0.2);
 }
 
-.section1 {
+.section1, .section4 {
     height: 700px;
     background-image: url('./img/bg-1.jpg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.section1 {
+    height: 700px;
+    background-image: url('./img/bg-1.jpg');
+}
+
+.section4 {
+    height: auto;
+    background-image: url('./img/bg-2.jpg');
+    text-align: center;
+    color:white;
+}
+
+.section7 {
+    height: auto;
+    background-image: url('./img/bg-3.jpg');
+    text-align: center;
+}
+
+.section7 h1 {
+    color: white;
+    margin: 0;
+    padding: 50px 0;
+    font-size: 40px;
+    text-shadow: 2px 2px black;
+}
+
+.section4 h1 {
+    margin: 0;
+    padding: 50px 0;
+    font-size: 40px;
+    text-shadow: 2px 2px #aaaaaa;
+}
+
+.section4 p {
+    width: 50%;
+    margin: 0 auto;
+    padding-bottom: 70px;
+    font-size: 20px;
+}
+
+.section5, .section6 {
+    text-align: center;
+}
+
+.section5 p {
+    text-align: left;
 }
 
 .section1 {
@@ -48,24 +97,32 @@ body {
     text-shadow: 2px 2px black;
 }
 
-.section1 h4 {
+.section1 h4{
     margin-top: 10px;
     margin-bottom: 10px;
     font-size: 30px;
 }
 
-.section1 h5 {
+.section1 h5  {
     margin-top: 0;
     font-size: 20px;
 }
 
-.card img {
+.card-normal img, .card-wide img {
     display: block;
 }
 
-.section2 {
+.section2, .section3 {
     display: inline-block;
     width: 100%;
+    text-align: center;
+}
+
+.section2 h3, .section2 p, .section3 p, .section6 h3, .section6 p {
+    text-align: left;
+}
+
+.section3 h3 {
     text-align: center;
 }
 
@@ -74,23 +131,116 @@ body {
     margin: 0 auto;
 }
 
-.card {
+.card-slim {
     float: left;
     margin: 70px 17px 0 15px;
-    padding: 0;
+    padding: 0 0 20px 0;
     background: #F2F2F2;
+    height: auto;
+    min-height: 490px;
+    width: 260px;
+}
+
+.card-normal {
+    float: left;
+    margin: 70px 17px 0 15px;
+    padding: 0 0 20px 0;
+    background: #F2F2F2;
+    height: auto;
     width: 360px;
 }
 
-.card h3, .card p {
-    padding: 5px 20px 0 20px;
+.card-wide {
+    float: left;
+    margin: 70px 17px 25px 15px;
+    padding: 0 0 20px 0;
+    background: #F2F2F2;
+    height: auto;
+    min-height: 555px;
+    width: 555px;
 }
 
-.card button {
+.card-ultra-wide {
+    float: left;
+    margin: 70px 17px 0 15px;
+    padding: 0 0 20px 0;
+    background: #F2F2F2;
+    height: auto;
+    width: 1140px;
+}
+
+.card-normal h3,
+.card-normal p,
+.card-wide h3,
+.card-wide p,
+.card-slim h3,
+.card-slim p,
+.card-ultra-wide h3,
+.card-ultra-wide p {
+    padding: 5px 20px 10px 20px;
+}
+
+.light-gray-background {
+    background: rgba(242, 242, 242, 0.4);
+    color: black;
     font-size: 18px;
-    border-radius: 6px;
+    border-radius: 10px;
     padding: 12px 30px;
     border: none;
+}
+
+.contact-panel {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.form-wrapper {
+    display: inline-block;
+    margin: 0 auto;
+    max-width: 55%;
+}
+
+.form-left-column {
+    float: left;
+    margin: 0 auto;
+    padding: 0 ;
+    width: 45%;
+    text-align: left;
+}
+
+.form-right-column {
+    float: right;
+    margin: 0 auto;
+    padding: 0;
+    width: 45%;
+}
+
+form input {
+    padding-top: 20px;
+    padding-left: 0;
+    margin-top: 20px;
+    margin-left: 0;
+    width: 90%;
+}
+
+form textarea {
+    padding-top: 20px;
+    padding-right: 0;
+    margin-top: 20px;
+    margin-right: 0;
+    width: 80%;
+    height: 150px;
+}
+
+button {
+    font-size: 18px;
+    border-radius: 10px;
+    padding: 12px 30px;
+    border: none;
+}
+.right-justify {
+    text-align: right;
+    margin: 0 100px;
 }
 
 .green-text {
@@ -111,11 +261,17 @@ body {
     color: white;
 }
 
-.gray-text {
-    color: #666666;
-}
-
 .button-red {
     background: #C9302C;
     color: white;
+}
+
+.button-white {
+    background: #ffffff;
+    color: #666666;
+    border: 1px solid #cccccc;
+}
+
+.button-white:hover {
+    background: rgba(0, 0, 0, 0.08);
 }
