made navbar fixed position

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .wrapper {
-    margin: 5px;
+    margin: 0;
     width: auto;
 }
 
@@ -12,6 +12,10 @@ body {
 
 .navbar {
     background: #383E4C;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     text-align: center;
 }
 
@@ -20,7 +24,8 @@ body {
     margin: 10px 10px 20px 10px;
     padding: 15px 25px;
     background: rgba(255, 255, 255, 0);
-    border: 1px solid white;
+    border: 1px solid #646d7c;
+    border-radius: 2px;
     color: white;
 }
 
